parameterized Anti hungarian check